--- a/me_page/index.html
+++ b/me_page/index.html
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#">Home</a>
+              <a class="nav-link js-scroll-trigger" href="/../">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger active" href="#home">ME-Page</a>
@@ -547,11 +547,11 @@
             <div class="footer-distributed">
                 <div class="footer-left">
                     <p class="footer-links">
-                        <a href="#">Home</a>
-                        <a href="#">Casual-ME</a>
-                        <a href="#">My Activities</a>
-                        <a href="#">Family</a>
-                        <a href="#">Friends</a>
+                        <a href="/../">Home</a>
+                        <a href="#about">Casual-ME</a>
+                        <a href="#myacts">My Activities</a>
+                        <a href="#family">Family</a>
+                        <a href="#friends">Friends</a>
                     </p>
                     <p class="footer-company-name">&copy; <script>document.write(new Date().getFullYear());</script> Utkarsh Mishra </p>
                 </div>
