--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
             <nav class="site-navigation position-relative" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="#portfolio-section" class="nav-link">Resume</a></li>
-                <li><a href="#blog-section" class="nav-link">Me Page</a></li>
+                <li><a href="/docs/resume.pdf" class="nav-link">Resume</a></li>
+                <li><a href="/me_page/" class="nav-link">Me Page</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
               </ul>
             </nav>
