--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           
           <div class="">
             <nav class="site-navigation position-relative text-right" role="navigation">
-              <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
+              <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block clearfix">
                 <li><a href="#home-section" class="nav-link">Home</a></li>
                 <li><a href="#about-section" class="nav-link">About</a></li>
                 <li><a href="#projects-section" class="nav-link">Projects</a></li>
@@ -89,7 +89,7 @@
           <div class="text-left">
 
             <nav class="site-navigation position-relative" role="navigation">
-              <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
+              <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block clearfix">
                 <li><a href="/docs/resume.pdf" class="nav-link">Resume</a></li>
                 <li><a href="/me_page/" class="nav-link">Me Page</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
@@ -232,16 +232,6 @@
             <h1 class="section-title text-center mb-5">Research Articles</h1>
           </div>
         </div>
-
-        <!--div class="row justify-content-center mb-5" data-aos="fade">
-          <div id="filters" class="filters text-center button-group col-md-7">
-            <button class="btn btn-primary active" data-filter="*">All</button>
-            <button class="btn btn-primary" data-filter=".legged">Legged Robots</button>
-            <button class="btn btn-primary" data-filter=".cable">Cable Robots</button>
-            <button class="btn btn-primary" data-filter=".quad">Quadrotors</button>
-            <button class="btn btn-primary" data-filter=".misc">Miscellaneous</button>
-          </div>
-        </div-->  
         
         <div id="posts" class="row no-gutter">
           <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
@@ -295,7 +285,7 @@
     <section class="site-section">
       <div class="container">
         <div class="row">
-          <div class="col-12 mb-5 position-relative">
+          <div class="col-12 mb-12 position-relative">
             <h1 class="section-title text-center">Internships and Collaborations</h1>
           </div>
           <div class="timeline">
@@ -569,12 +559,12 @@
     <footer class="site-section bg-light footer">
       <div class="container">
         <div class="row mb-5">
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
             <h3 class="footer-title">Utkarsh Mishra</h3>
             <p><span class="d-inline-block d-md-block">BG-03 Jawahar Bhawan </span> Indian Institute of Technology (IIT) Roorkee,</span> Uttarakhand, India 247667</p>
             <p><span class="d-inline-block d-md-block">CE-10/1 Arjunpur (East),</span> Kolkata, West Bengal, India 700059</p>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 col-6">
           	<h3 class="footer-title text-center">Around the Web</h3>
             <div class="middle">
 		      <a class="btn1" href="https://www.facebook.com/Utkarsh745">
