--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
       </div>
 
-      <img src="images/albedo_face.png" alt="Free Website Template by Free-Template.co" class="img-face" data-aos="fade">
+      <img src="images/face.jpeg" alt="Free Website Template by Free-Template.co" class="img-face" data-aos="fade" style="opacity: 30%;height: 100%;" style="max-width: 100%" >
 
       
     </div>  
@@ -141,7 +141,7 @@
           </div>
           <div class="col-lg-4 order-1 order-lg-3 mb-4 mb-lg-0">
             <div class="bg-light pt-5">
-            <img src="images/albedo_face.png" alt="Free Website Template by Free-Template.co" class="img-fluid">
+            <img src="images/face.jpeg" alt="Free Website Template by Free-Template.co" class="img-fluid">
             </div>
           </div>
           <div class="col-lg-4 order-2 order-lg-1">
@@ -162,15 +162,15 @@
     <div class="site-section" id="projects-section">
       <div class="container">
         <div class="row ">
-          <div class="col-12 mb-5 position-relative">
+          <div class="col-12 mb-12 position-relative">
             <h1 class="section-title text-center mb-5">Projects</h1>
           </div>
           
-          <div class="col-md-6 mb-4">
+          <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
               <div class="service-number mr-4"><span>01</span></div>
               <div class="service-about">
-              <video id='video' controls="controls" preload='none' width="400"
+              <video id='video' controls="controls" preload='none' style="max-width: 100%" 
         poster="images/Swarmrobo.png">
         <source id='mp4' src="videos/SwarmRobo.mp4" type='video/mp4' />
         <p>Your user agent does not support the HTML5 Video element.</p>
@@ -179,11 +179,11 @@
             </div>
           </div>
 
-          <div class="col-md-6 mb-4">
+          <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
               <div class="service-number mr-4"><span>02</span></div>
               <div class="service-about">
-              <video id='video' controls="controls" preload='none' width="400"
+              <video id='video' controls="controls" preload='none' style="max-width: 100%" 
         poster="images/MED2020.png">
         <source id='mp4' src="videos/MED2020.mp4" type='video/mp4' />
         <p>Your user agent does not support the HTML5 Video element.</p>
@@ -192,11 +192,11 @@
             </div>
           </div>
 
-          <div class="col-md-6 mb-4">
+          <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
               <div class="service-number mr-4"><span>03</span></div>
               <div class="service-about">
-              <video id='video' controls="controls" preload='none' width="400"
+              <video id='video' controls="controls" preload='none' style="max-width: 100%" 
         poster="images/SHTC2020.png">
         <source id='mp4' src="videos/SHTC2020.mp4" type='video/mp4' />
         <p>Your user agent does not support the HTML5 Video element.</p>
@@ -205,11 +205,11 @@
             </div>
           </div>
 
-          <div class="col-md-6 mb-4">
+          <div class="col-12 mb-12 col-md-6 mb-6">
             <div class="service d-flex h-100">
               <div class="service-number mr-4"><span>04</span></div>
               <div class="service-about">
-              <video id='video' controls="controls" preload='none' width="400"
+              <video id='video' controls="controls" preload='none' style="max-width: 100%" 
         poster="images/FEDSM2020.png">
         <source id='mp4' src="videos/FEDSM2020.mp4" type='video/mp4' />
         <p>Your user agent does not support the HTML5 Video element.</p>
@@ -288,9 +288,9 @@
           <div class="col-12 mb-12 position-relative">
             <h1 class="section-title text-center">Internships and Collaborations</h1>
           </div>
-          <div class="timeline">
-			<div class="item1">
-				<div class="img"><img src="images/epfl.jpg"></div>
+          <div class="timeline" style="max-width: 100%" >
+			<div class="item1" style="max-width: 100%" >
+				<div class="img" style="max-width: 100%" ><img src="images/epfl.jpg"></div>
 				<div class="wrap">
 					<div class="date">May 2020 - Present</div>
 					<h3 class="title">Collaborator, EPFL Biorobotics Laboratory</h3>
@@ -300,8 +300,8 @@
 				</div>
 			</div>
 
-			<div class="item1">
-				<div class="img"><img src="images/ls2n.jpg"></div>
+			<div class="item1" style="max-width: 100%" >
+				<div class="img" style="max-width: 100%" ><img src="images/ls2n.jpg"></div>
 				<div class="wrap">
 					<div class="date">May 2020 - Present</div>
 					<h3 class="title">Collaborator, Nantes Laboratory of Digital Sciences</h3>
@@ -311,8 +311,8 @@
 				</div>
 			</div>
 
-			<div class="item1">
-				<div class="img"><img src="images/swaayatt.png"></div>
+			<div class="item1" style="max-width: 100%" >
+				<div class="img" style="max-width: 100%" ><img src="images/swaayatt.png"></div>
 				<div class="wrap">
 					<div class="date">April 2020 - Present</div>
 					<h3 class="title">Reinforcement Learning Intern, Swaayatt Robots</h3>
@@ -322,8 +322,8 @@
 				</div>
 			</div>
 
-			<div class="item1">
-				<div class="img"><img src="images/spark.png"></div>
+			<div class="item1" style="max-width: 100%" >
+				<div class="img" style="max-width: 100%" ><img src="images/spark.png"></div>
 				<div class="wrap">
 					<div class="date">May 2019 - July 2019</div>
 					<h3 class="title">Undergraduate Research Fellow, SPARK IIT Roorkee</h3>
@@ -371,7 +371,7 @@
 
     <div class="site-section" id="education-section">
       <div class="container">
-        <div class="row" style="justify-content: center; margin: auto;">
+        <div class="row" style="justify-content: center; margin: auto;" style="max-width: 100%" >
           <div class="col-12 mb-4 position-relative">
             <h1 class="section-title">Education</h1>
           </div>
@@ -404,7 +404,7 @@
           <div class="col-12 mb-4 position-relative">
             <h1 class="section-title">Campus Group</h1>
           </div>
-          <div class="col-lg-6 mb-6">
+          <div class="col-md-12 col-lg-6 mb-6">
             <div>
 					<div class="date"><h3>January 2018 - Present</h3></div>
 					<div class="title">
@@ -419,9 +419,9 @@
 					</div>
 				</div>
           </div>
-          <div class="col-lg-6 mb-6 mb-lg-0">
+          <div class="col-md-12 col-lg-6 mb-6 mb-lg-0">
             <div>
-            <img src="images/iitrms.jpg" alt="Free Website Template by Free-Template.co" class="img" style="background: #fff;width: 30rem;height: 20rem;border-radius: 10%">
+            <img src="images/iitrms.jpg" alt="Free Website Template by Free-Template.co" class="img" style="background: #fff;width:100%;height: 20rem;border-radius: 10%" >
             </div>
           </div>          
         </div>
