All texts filled

--- a/index.html
+++ b/index.html
@@ -144,17 +144,14 @@
             <img src="images/face.jpeg" alt="Free Website Template by Free-Template.co" class="img-fluid">
             </div>
           </div>
-          <div class="col-lg-4 order-2 order-lg-1">
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-          </div>
-          <div class="col-lg-4 order-3 order-lg-2">
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+          <div class="col-lg-8 order-2 order-lg-1">
+            <p>I am a  final year undergraduate student at the Indian Institute of Technology (IIT) Roorkee majoring in Mechanical Engineering. Since my first year, I have involved myself in diverse activities starting from developing Apps in Android to Robotics to being a mechanical team executive at the Formula Student team of my institute. I am quite passionate about starting my career in the fields of robotics which is a perfect combination of my Mechanical Engineering knowledge and Programming vehemence.</p>
+            <p>Being a member of a Formula Student team, I am quite captivated by the autonomous driverless systems. The interesting concepts of localization, mapping and navigation entice and motivate me to come up with state-of-the-art solutions.</p>
+            <p>Recently, I started exploring Reinforcement learning strategies which intrigued me with its wide variety of applications in learning from known or unknown situations. I really like the concept as it directly correlates with how we, as humans, think and act.</p>
 
-            <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen.</p>
+            <p>Apart from my professional and work life, I have many extra-curricular interests as well. I meet a lot of people and make great friends. You can find more by visiting my <a href="/me_page/">ME Page</a></p>
           </div>
-          
-        </div>
+          </div>
       </div>
     </div>
 
@@ -293,9 +290,9 @@
 				<div class="img" style="max-width: 100%" ><img src="images/epfl.jpg"></div>
 				<div class="wrap">
 					<div class="date">May 2020 - Present</div>
-					<h3 class="title">Collaborator, EPFL Biorobotics Laboratory</h3>
+					<h3 class="title">Collaborator, <a href="https://www.epfl.ch/labs/biorob/">EPFL Biorobotics Laboratory</a></h3>
 					<div class="content">
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio omnis inventore quisquam ratione ut aliquid saepe beatae culpa atque adipisci, error, deleniti dolor iusto iste possimus asperiores magni sunt eum?</p>
+						<p>I am currently involved in a project with Dr. Dimitar Stanev under Dr. Auke Ijspeert's Biorobotics Lab at EPFL. The work deals with developing reinforcement learning agents efficient enough to make a musculo-skeletal human model do the desired tasks. I learnt to use Opensim, Simbody and executing SLURM cluster jobs.</p>
 					</div>
 				</div>
 			</div>
@@ -304,9 +301,9 @@
 				<div class="img" style="max-width: 100%" ><img src="images/ls2n.jpg"></div>
 				<div class="wrap">
 					<div class="date">May 2020 - Present</div>
-					<h3 class="title">Collaborator, Nantes Laboratory of Digital Sciences</h3>
+					<h3 class="title">Collaborator, <a href="https://www.ls2n.fr/equipe/romas/">Nantes Laboratory of Digital Sciences</a></h3>
 					<div class="content">
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio omnis inventore quisquam ratione ut aliquid saepe beatae culpa atque adipisci, error, deleniti dolor iusto iste possimus asperiores magni sunt eum?</p>
+						<p>I am doing a project under the guidance of <a href="https://www.ls2n.fr/annuaire/Stephane%20CARO/">Dr. Stephane Caro</a>, Head of Team RoMaS at LS2N. The project deals with path planning of a Cable Driven Parallel Robot in complex obstacle-cluttered environments under certain objectives. The project is on MATLAB.</p>
 					</div>
 				</div>
 			</div>
@@ -315,9 +312,9 @@
 				<div class="img" style="max-width: 100%" ><img src="images/swaayatt.png"></div>
 				<div class="wrap">
 					<div class="date">April 2020 - Present</div>
-					<h3 class="title">Reinforcement Learning Intern, Swaayatt Robots</h3>
+					<h3 class="title">Reinforcement Learning Intern, <a href="http://www.swaayatt-robots.com/">Swaayatt Robots</a></h3>
 					<div class="content">
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio omnis inventore quisquam ratione ut aliquid saepe beatae culpa atque adipisci, error, deleniti dolor iusto iste possimus asperiores magni sunt eum?</p>
+						<p>I am involved as an intern with the Indian Self-Driving startup. My work was dedicated towards developing reinforcement learning based behavioral planner for autonomous driving. The agents were simulated in the CARLA Self Driving Simulator coupled with CARLA-ROS Bridge to use all the ROS functionalities.</p>
 					</div>
 				</div>
 			</div>
@@ -326,9 +323,9 @@
 				<div class="img" style="max-width: 100%" ><img src="images/spark.png"></div>
 				<div class="wrap">
 					<div class="date">May 2019 - July 2019</div>
-					<h3 class="title">Undergraduate Research Fellow, SPARK IIT Roorkee</h3>
+					<h3 class="title">Undergraduate Research Fellow, <a href="http://spark.iitr.ac.in/">SPARK IIT Roorkee</a></h3>
 					<div class="content">
-						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio omnis inventore quisquam ratione ut aliquid saepe beatae culpa atque adipisci, error, deleniti dolor iusto iste possimus asperiores magni sunt eum?</p>
+						<p>I was selected for the IIT Roorkee SPARK Summer Undergraduate Research Fellowship. I was supervised by <a href="https://iitr.ac.in/departments/ME/pages/People+Faculty+Ankit_Bansal.html">Dr. Ankit Bansal</a> to do a work based on statistical sampling in Monte Carlo estimates for Radiative Heat Transfer. The work was accepted and to be published by the ASME Summer Heat Transfer Conference 2020.</p>
 					</div>
 				</div>
 			</div>
@@ -339,7 +336,7 @@
 
 
 
-    <section class="site-section bg-primary">
+    <!--section class="site-section bg-primary">
       <div class="container">
         <div class="row">
           <div class="col-12 mb-5 position-relative">
@@ -367,7 +364,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section-->
 
     <div class="site-section" id="education-section">
       <div class="container">
@@ -411,11 +408,11 @@
 						<p>
 					<h3>Aerodynamics Head</h3> <h3>Autonomous Subsystem Member</h3></p>
 					</div>
-					<h4 class="title">IIT Roorkee Motorsports</h4>
+					<h4 class="title"><a href="http://motorsports.iitr.ac.in/">IIT Roorkee Motorsports</a></h4>
 					<h5 class="title">The Official Formula Student Team of IIT Roorkee</h5>
 					<h5 class="title">Electrifying Racing in a Greener Way</h5>
 					<div class="content">
-						<p>Currently I am Autonomous Subsystem Head and involve in activities of active designing, CFD simulation of the complete aerodynamic package of the Formula Student Prototype. I am fervidly contributing to the construction of the Autonomous Systems Segment of the group</p>
+						<p>Currently I am Aerodynamics Subsystem Head and involve in activities of active designing, CFD simulation of the complete aerodynamic package of the Formula Student Prototype. I am fervidly contributing to the construction of the Autonomous Systems Segment of the group</p>
 					</div>
 				</div>
           </div>
@@ -436,26 +433,42 @@
             <h2 class="section-title text-center mb-5">Know About My Skills</h2>
           </div>
 
-          <div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
+          <div class="col-4 mb-5 mb-lg-0 col-lg-4">
             <div class="blog_entry">
-              <div class="p-4 bg-white">
+              <div class="p-4 bg-white" style="align-items: center;justify-content: center;text-align: center;margin: auto;">
                 <h3>Programming Languages</h3>
+                <img src="images/skills/c++.png" style="background: #fff;max-height: 8rem;padding: 5%" >
+                <img src="images/skills/python.png" style="background: #fff;max-height: 8rem;padding: 5%" >
+                <img src="images/skills/tensorflow.png" style="background: #fff;max-height: 8rem;padding: 5%" >
+                <img src="images/skills/html.png" style="background: #fff;max-height: 8rem;padding: 5%" >
+                <img src="images/skills/css.png" style="background: #fff;max-height: 8rem;padding: 5%" >
+                <img src="images/skills/js.svg" style="background: #fff;max-height: 8rem;padding: 5%" >
               </div>
             </div>
           </div>
 
-          <div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
+          <div class="col-4 mb-5 mb-lg-0 col-lg-4">
             <div class="blog_entry">
-              <div class="p-4 bg-white">
+              <div class="p-4 bg-white" style="align-items: center;justify-content: center;text-align: center;margin: auto;">
                 <h3>Softwares and Utilities</h3>
+                <img src="images/skills/ros.png" style="background: #fff;max-height: 6rem;padding: 5%" >
+                <!--img src="images/skills/gazebo.png" style="background: #fff;max-height: 6rem;padding: 5%" >
+                <img src="images/skills/rviz.png" style="background: #fff;max-height: 6rem;padding: 5%" -->
+                <img src="images/skills/matlab.png" style="background: #fff;max-height: 6rem;padding: 5%" >
+                <!--img src="images/skills/simulink.png" style="background: #fff;max-height: 6rem;padding: 5%"-->
+                <img src="images/skills/opensim.png" style="background: #fff;max-height: 6rem;padding: 5%">
+                <img src="images/skills/solidworks.jpeg" style="background: #fff;max-height: 6rem;padding: 5%" >
+                <img src="images/skills/ansys.png" style="background: #fff;max-height: 6rem;padding: 5%" >
               </div>
             </div>
           </div>
 
-          <div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
+          <div class="col-4 mb-5 mb-lg-0 col-lg-4">
             <div class="blog_entry">
-              <div class="p-4 bg-white">
-                <h3>Courses</h3>
+              <div class="p-4 bg-white" style="align-items: center;justify-content: center;text-align: center;margin: auto;">
+                <h3>Others</h3>
+                <img src="images/skills/ubuntu.png" style="background: #fff;max-height: 8rem;padding: 5%" >
+                <img src="images/skills/latex.png" style="background: #fff;max-height: 8rem;padding: 5%" >
               </div>
             </div>
           </div>
@@ -559,12 +572,12 @@
     <footer class="site-section bg-light footer">
       <div class="container">
         <div class="row mb-5">
-          <div class="col-md-6 col-6">
+          <div class="col-md-4 mb-12" style="align-items: center;justify-content: center;text-align: center;">
             <h3 class="footer-title">Utkarsh Mishra</h3>
             <p><span class="d-inline-block d-md-block">BG-03 Jawahar Bhawan </span> Indian Institute of Technology (IIT) Roorkee,</span> Uttarakhand, India 247667</p>
             <p><span class="d-inline-block d-md-block">CE-10/1 Arjunpur (East),</span> Kolkata, West Bengal, India 700059</p>
           </div>
-          <div class="col-md-6 col-6">
+          <div class="col-md-8 mb-12">
           	<h3 class="footer-title text-center">Around the Web</h3>
             <div class="middle">
 		      <a class="btn1" href="https://www.facebook.com/Utkarsh745">
