--- a/me_page/index.html
+++ b/me_page/index.html
@@ -134,8 +134,8 @@
                 <div class="col-md-6">
                     <div class="message-box">                        
                         <h2>Casual ME</h2>
-                        <p> I live in Kolkata, notorious as the City of Joy. You can think of me as a Bengali but my family originates from Bihar. I was born and brought up in here but my mother tongue is Hindi, so it is fine to call my language an imperfect but amusing mixture of both. I have a dangerous prediliction for the famous Bengali "Rosogolla". My life revolves around a small and sweet family of six comprising of my precious parents, grandparents and my dearest sister. Music captivates me and coming up with one of my own seems so exciting.</p>
-						<p>My college life at IIT Roorkee, my second home, have been so much fun where I experienced being on my own, travelling alone, go on trips and late night fun activities. This is the last year of my undergraduate life and I am quite nostalgic about me standing at the main gate of IIT Roorkee on my first day here.</p>
+                        <p> I live in Kolkata, notorious as the City of Joy. You can think of me as a Bengali but my family originates from Bihar. I was born and brought up here but my mother tongue is Hindi, so it is fine to call my language an imperfect but amusing mixture of both. I have a dangerous prediliction for the famous Bengali "Rosogolla". My life revolves around a small and sweet family of six comprising of my precious parents, grandparents and my dearest sister. Music captivates me and coming up with one of my own seems so exciting.</p>
+						<p>My college life at IIT Roorkee, my second home, has been so much fun where I experienced being on my own, travelling alone, going on trips and late night fun activities. This is the last year of my undergraduate life and I am quite nostalgic about me standing at the main gate of IIT Roorkee on my first day here.</p>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
@@ -218,7 +218,7 @@
 		<div class="container">
 			<div class="section-title text-left">
                 <h3>My Activities</h3>
-                <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
+                <p>I am involved in activities like sketching and playing guitar. Also, I am learning to play the Indian bamboo flute.</p>
             </div><!-- end title -->
 			
 			<div class="gallery-menu row">
@@ -294,7 +294,7 @@
 		<div class="container">
 			<div class="section-title text-left">
                 <h3>Family</h3>
-                <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
+                <p>Fortunately, my Father loves to go on trips too and so do I. My family celebrates a lot of festivals. Also, my sister is quite good at taking selfies &#128540;</p>
             </div><!-- end title -->
 			
 			<div class="gallery-menu row">
@@ -395,7 +395,7 @@
 		<div class="container">
 			<div class="section-title text-left">
                 <h3>Friends</h3>
-                <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
+                <p>I have very precious home-town friends, a great family of my Mechanical batchmates and a great Motorsports team full of enthusiastic like minded people.</p>
             </div><!-- end title -->
 			
 			<div class="gallery-menu row">
