Added contact form

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             <h2 class="section-title text-center mb-5">Know About My Skills</h2>
           </div>
 
-          <div class="col-4 mb-5 mb-lg-0 col-lg-4">
+          <div class="mb-5 mb-lg-0 col-lg-4">
             <div class="blog_entry">
               <div class="p-4 bg-white" style="align-items: center;justify-content: center;text-align: center;margin: auto;">
                 <h3>Programming Languages</h3>
@@ -447,7 +447,7 @@
             </div>
           </div>
 
-          <div class="col-4 mb-5 mb-lg-0 col-lg-4">
+          <div class="mb-5 mb-lg-0 col-lg-4">
             <div class="blog_entry">
               <div class="p-4 bg-white" style="align-items: center;justify-content: center;text-align: center;margin: auto;">
                 <h3>Softwares and Utilities</h3>
@@ -463,7 +463,7 @@
             </div>
           </div>
 
-          <div class="col-4 mb-5 mb-lg-0 col-lg-4">
+          <div class="mb-5 mb-lg-0 col-lg-4">
             <div class="blog_entry">
               <div class="p-4 bg-white" style="align-items: center;justify-content: center;text-align: center;margin: auto;">
                 <h3>Others</h3>
@@ -531,31 +531,31 @@
             <h2 class="section-title text-center mb-5">Contact Form</h2>
           </div>
         </div>
-        <form action="#" class="form">
+        <form action="action_page.php" method="post" class="form">
           <div class="row mb-4">
             <div class="form-group col-6">
-              <input type="text" class="form-control" placeholder="First name">
+              <input type="text" id="fname" class="form-control" placeholder="First name">
             </div>
             <div class="form-group col-6">
-              <input type="text" class="form-control" placeholder="Full name">
+              <input type="text" id="lname" class="form-control" placeholder="Last name">
             </div>
           </div>
 
           <div class="row mb-4">
             <div class="form-group col-12">
-              <input type="email" class="form-control" placeholder="Email address">
+              <input type="email" id="email" class="form-control" placeholder="Email address">
             </div>
           </div>
 
           <div class="row mb-4">
             <div class="form-group col-12">
-              <input type="text" class="form-control" placeholder="Subject of the message">
+              <input type="text" id="subject" class="form-control" placeholder="Subject of the message">
             </div>
           </div>
 
           <div class="row mb-4">
             <div class="form-group col-12">
-              <textarea name="" id="" cols="30" rows="10" class="form-control" placeholder="Type your message here.."></textarea>
+              <textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Type your message here.."></textarea>
             </div>
           </div>
 
