Modified contact form

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
             <h2 class="section-title text-center mb-5">Contact Form</h2>
           </div>
         </div>
-        <form action="action_page.php" method="post" class="form">
+        <form action="https://formspree.io/xeqrwaqv" method="POST" class="form">
           <div class="row mb-4">
             <div class="form-group col-6">
               <input type="text" id="fname" class="form-control" placeholder="First name">
