Modified friends photos

--- a/me_page/index.html
+++ b/me_page/index.html
@@ -412,18 +412,18 @@
 			<div class="gallery-list row">
 				<div class="col-md-4 col-sm-6 gallery-grid gal_a">
 					<div class="gallery-single fix">
-						<img src="images/activities/act6.jpg" class="img-fluid" alt="Image">
+						<img src="images/activities/homef.jpg" class="img-fluid" alt="Image">
 						<div class="img-overlay">
-							<a href="images/activities/act6.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+							<a href="images/activities/homef.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
 						</div>
 					</div>
 				</div>
 				
 				<div class="col-md-4 col-sm-6 gallery-grid gal_b">
 					<div class="gallery-single fix">
-						<img src="images/activities/act6.jpg" class="img-fluid" alt="Image">
+						<img src="images/activities/iitf.jpeg" class="img-fluid" alt="Image">
 						<div class="img-overlay">
-							<a href="images/activities/act6.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+							<a href="images/activities/iitf.jpeg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
 						</div>
 					</div>
 				</div>
@@ -451,15 +451,6 @@
 						<img src="images/activities/iitrms3.JPG" class="img-fluid" alt="Image">
 						<div class="img-overlay">
 							<a href="images/activities/iitrms3.JPG" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
-						</div>
-					</div>
-				</div>
-				
-				<div class="col-md-4 col-sm-6 gallery-grid gal_c">
-					<div class="gallery-single fix">
-						<img src="images/activities/iitrms4.jpeg" class="img-fluid" alt="Image">
-						<div class="img-overlay">
-							<a href="images/activities/iitrms4.jpeg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
 						</div>
 					</div>
 				</div>
