shriya birthday added

--- a/me_page/index.html
+++ b/me_page/index.html
@@ -134,7 +134,7 @@
                 <div class="col-md-6">
                     <div class="message-box">                        
                         <h2>Casual ME</h2>
-                        <p> I live in Kolkata, notorious as the City of Joy. You can think of me as a Bengali but my family originates from Bihar. I was born and brought up here but my mother tongue is Hindi, so it is fine to call my language an imperfect but amusing mixture of both. I have a dangerous prediliction for the famous Bengali "Rosogolla". My life revolves around a small and sweet family of six comprising of my precious parents, grandparents and my dearest sister. Music captivates me and coming up with one of my own seems so exciting.</p>
+                        <p> I live in Kolkata, notorious as the City of Joy. You can think of me as a Bengali but my family originates from Bihar. I was born and brought up here but my mother tongue is Hindi, so it is fine to call my language an imperfect but amusing mixture of both. I have a dangerous predilection for the famous Bengali "Rosogolla". My life revolves around a small and sweet family of six comprising of my precious parents, grandparents and my dearest sister. Music captivates me and coming up with one of my own seems so exciting.</p>
 						<p>My college life at IIT Roorkee, my second home, has been so much fun where I experienced being on my own, travelling alone, going on trips and late night fun activities. This is the last year of my undergraduate life and I am quite nostalgic about me standing at the main gate of IIT Roorkee on my first day here.</p>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
@@ -285,6 +285,14 @@
 						      </video>
 					</div>
 				</div>
+				<div class="col-md-4 col-sm-6 gallery-grid gal_b">
+					<div class="gallery-single fix">
+							<video id='video' controls="controls" preload='none' width="400" poster="images/activities/guitar4.png">
+						        <source id='mp4' src="images/activities/guitar4.mp4" type='video/mp4' />
+						        <p>Your user agent does not support the HTML5 Video element.</p>
+						      </video>
+					</div>
+				</div>
 			</div>
 			</div>
 		</div>
@@ -353,15 +361,6 @@
 						</div>
 					</div>
 				</div>
-				
-				<div class="col-md-4 col-sm-6 gallery-grid gal_a">
-					<div class="gallery-single fix">
-						<img src="images/activities/act13.jpg" class="img-fluid" alt="Image">
-						<div class="img-overlay">
-							<a href="images/activities/act13.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
-						</div>
-					</div>
-				</div>
 				<div class="col-md-4 col-sm-6 gallery-grid gal_b">
 					<div class="gallery-single fix">
 						<img src="images/activities/act8.jpg" class="img-fluid" alt="Image">
@@ -383,6 +382,22 @@
 						<img src="images/activities/act6.jpg" class="img-fluid" alt="Image">
 						<div class="img-overlay">
 							<a href="images/activities/act6.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 gallery-grid gal_c">
+					<div class="gallery-single fix">
+						<img src="images/activities/act15.jpg" class="img-fluid" alt="Image">
+						<div class="img-overlay">
+							<a href="images/activities/act15.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 gallery-grid gal_c">
+					<div class="gallery-single fix">
+						<img src="images/activities/act16.jpg" class="img-fluid" alt="Image">
+						<div class="img-overlay">
+							<a href="images/activities/act16.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
 						</div>
 					</div>
 				</div>
