--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
         
         <div id="posts" class="row no-gutter">
-          <div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
+          <!--div class="item web col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
             <a href="images/TRO_NNTQLD.jpg" class="item-wrap fancybox">
               <span class="icon-search2"></span>
               <img class="img-fluid" src="images/TRO_NNTQLD.jpg">
@@ -249,7 +249,7 @@
               <span class="icon-search2"></span>
               <img class="img-fluid" src="images/Rejected_IROS.jpg">
             </a>
-          </div>
+          </div-->
 
           <div class="item design col-6 col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-4">
 
