--- a/me_page/index.html
+++ b/me_page/index.html
@@ -134,7 +134,7 @@
                 <div class="col-md-6">
                     <div class="message-box">                        
                         <h2>Casual ME</h2>
-                        <p> I live in Kolkata, notorious as the City of Joy. You can think of me as a Bengali but my family originates from Bihar. I was born and brought up here but my mother tongue is Hindi, so it is fine to call my language an imperfect but amusing mixture of both. I have a dangerous predilection for the famous Bengali "Rosogolla". My life revolves around a small and sweet family of six comprising of my precious parents, grandparents and my dearest sister. Music captivates me and coming up with one of my own seems so exciting.</p>
+                        <p> I live in Kolkata, celebrated as the City of Joy. You can think of me as a Bengali but my family originates from Bihar. I was born and brought up here but my mother tongue is Hindi, so it is fine to call my language an imperfect but amusing mixture of both. I have a dangerous predilection for the famous Bengali "Rosogolla". My life revolves around a small and sweet family of six comprising of my precious parents, grandparents and my dearest sister. Music captivates me and coming up with one of my own seems so exciting.</p>
 						<p>My college life at IIT Roorkee, my second home, has been so much fun where I experienced being on my own, travelling alone, going on trips and late night fun activities. This is the last year of my undergraduate life and I am quite nostalgic about me standing at the main gate of IIT Roorkee on my first day here.</p>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
